# Linear-Regression-Dashboard

./: README.md  app.py  pyproject.toml  requirements.txt
src/linear_regression_dashboard/: __init__.py
src/linear_regression_dashboard/get_data/: __init__.py  get_data.py
src/linear_regression_dashboard/layouts/: __init__.py  ols_example.py
src/linear_regression_dashboard/plots/: __init__.py  betas_plot.py  fisher_test.py  scatter_plot.py  squared_sum_errors_plot.py  squared_sums_treemap.py  t_student_test.py  time_series_plot.py
