[project]
name = "Linear-Regression-Dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Edgar Alcántara", email = "edgarallo0@hotmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "fredapi>=0.5.2",
    "pytrends>=4.9.2",
    "streamlit>=1.35.0",
    "streamlit-option-menu>=0.3.13",
    "statsmodels>=0.14.2",
    "scipy>=1.13.1",
    "plotly>=5.22.0",
    "seaborn>=0.13.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
